# urpm-ng

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_de.md  CONTRIBUTING_es.md  CONTRIBUTING_fr.md  CONTRIBUTING_it.md  CONTRIBUTING_nl.md  CONTRIBUTING_pt.md  FEATURES.md  MANIFEST.in  Makefile  QUESTIONS.md  QUICKSTART.md  README.md  TESTS_TODO.md  TODEBUG.md  TODO  TODO.md  TODO_PROXY.md  analyze.py  prout.txt  pyproject.toml
.github/workflows/: python.yml
completion/: urpm.bash
data/: appstream-mageia.conf  mageia.metainfo.xml  org.mageia.Urpm.v1.conf  org.mageia.Urpm.v1.service  org.mageia.urpm.policy  rules.urpm-ng  urpm-dbus.service
data/etc/urpm/: urpm.cfg
data/polkit/: org.mageia.rpmdrake.policy
data/profiles/: bootstrap.yaml  build.yaml  ci.yaml  minimal.yaml
doc/: ARCHITECTURE.md  DONE_MU_LOCK.md  HOWTO_TESTS.md  PLAN_GENMEDIA.md  PLAN_SELF_QUERY.md  PLAN_TRANSACTION_MODES.md  RELEASE_TEMPLATE.md  ROADMAP.md  SPEC-RPMDRAKE-NG.md  TESTING.md  TESTS_INSTALL_DEBUG.md  TODO_DASHBOARD.md  TODO_DEBUG_LIBSOLV.md  TODO_GENMEDIA.md  TODO_MANAGE_BUILDDEPS.md  TODO_MU_LOCK.md  TODO_README_TRANSLATIONS.md  TODO_SHRINK_FILES_DB.md  TODO_SUPPLEMENTS.md  TODO_XFAILS.md  architecture_urpmi_legacy.md  format_reference.md  parse_hdlist.py  plan_developpement.md  revue_dnf_vs_urpm.md  urpm_format_guide.md  urpm_modern_cli.md
doc/archives/: MISSING_APPSTREAM.md  TODO_APPSTREAM.md  TODO_URPMF.md  hdlist_parsing_guide.md  points_de_vigilance_et_idees_en_vrac.md
etc/systemd/: urpmd.service
man/de/man1/: urpm.1
man/de/man8/: urpmd.8
man/en/man1/: urpm.1
man/en/man8/: urpmd.8
man/es/man1/: urpm.1
man/es/man8/: urpmd.8
man/fr/man1/: urpm.1
man/fr/man8/: urpmd.8
man/it/man1/: urpm.1
man/it/man8/: urpmd.8
man/nl/man1/: urpm.1
man/nl/man8/: urpmd.8
man/pt/man1/: urpm.1
man/pt/man8/: urpmd.8
pk-backend-urpm/: meson.build  meson_options.txt  pk-backend-job.h  pk-backend-urpm.c  pk-backend.h
po/: LINGUAS  POTFILES.in  de.po  es.po  fr.po  it.po  nl.po  pt.po  urpm.pot
rpmbuild/SOURCES/: urpmd.service
rpmbuild/SPECS/: urpm-ng.spec
rpmdrake/: Makefile  README.md  __init__.py  pyproject.toml
rpmdrake/.omc/state/: agent-replay-3afd3a64-47a2-4742-934c-5aba597e5447.jsonl  idle-notif-cooldown.json  subagent-tracking.json
rpmdrake/common/: __init__.py  controller.py  helper_client.py  interfaces.py
rpmdrake/data/: org.mageia.rpmdrake.policy  rpmdrake-ng.desktop
rpmdrake/data/.omc/state/: idle-notif-cooldown.json
rpmdrake/helper/: __init__.py  transaction_helper.py
rpmdrake/man/en/man1/: rpmdrake-ng.1
rpmdrake/man/fr/man1/: rpmdrake-ng.1
rpmdrake/po/: POTFILES.in  rpmdrake.pot
rpmdrake/qt/: __init__.py  compat.py  main.py  view.py
rpmdrake/qt/widgets/: __init__.py  download_progress.py  filter_panel.py  package_list.py  search_bar.py
rpmdrake/rpmbuild/SPECS/: rpmdrake-ng.spec
rpmdrake/rpmdrake/: __init__.py  i18n.py
rpmdrake/rpmdrake/common/: controller.py  helper_client.py  interfaces.py  models.py
rpmdrake/rpmdrake/helper/: transaction_helper.py
rpmdrake/rpmdrake/qt/: compat.py  main.py  palette.py  view.py
rpmdrake/rpmdrake/qt/widgets/: __init__.py  category_panel.py  collapsible_group.py  detail_panel.py  download_progress.py  filter_panel.py  filter_zone.py  package_list.py  search_bar.py
tests/: reset_plasma.sh
urpm/: __init__.py  __main__.py  i18n.py
urpm/auth/: __init__.py  audit.py  context.py  polkit.py  privileges.py
urpm/cli/: __init__.py  colors.py  display.py  main.py
urpm/cli/commands/: __init__.py  _install_pipeline.py  appstream.py  build.py  cache.py  cleanup.py  config.py  depends.py  genmedia.py  history.py  install.py  media.py  mirror.py  peer.py  progress.py  query.py  readme.py  remove.py  server.py  upgrade.py
urpm/cli/helpers/: __init__.py  alternatives.py  debug.py  kernel.py  media.py  package.py  progress.py  resolver.py  security.py
urpm/core/: __init__.py  _pending_media_rename.py  appstream.py  auto_upgrade_policy.py  background_install.py  buildrequires.py  cache.py  compression.py  config.py  container.py  database.py  download.py  files_xml.py  hdlist.py  install.py  media_cfg.py  mirrorlist.py  needs_restart.py  operations.py  peer_client.py  readme.py  resilient_install.py  resolver.py  rpm.py  rpmsrate.py  server_pool.py  settings.py  sync.py  sync_lock.py  synthesis.py  transaction_queue.py  triggers.py
urpm/core/db/: __init__.py  cache.py  constraints.py  (+5 more)
urpm/daemon/: __init__.py  adaptive.py  daemon.py  discovery.py  scheduler.py  server.py  wakeup.py
urpm/dbus/: README.md  __init__.py  org.mageia.Urpm.v1.xml  service.py
urpm/genmedia/: __init__.py  compress.py  generator.py  scanner.py
urpm/tests/: .gitignore  README-test_install.md  __init__.py  gen_test_rpms.py  test_adaptive.py  test_arch_helpers.py  test_arch_parser.py  test_cli.py  test_daemon_arch.py  test_database.py  test_depends_arch.py  test_diagnose.py  test_download.py  test_files_xml_sync.py  test_genmedia.py  test_install.py  test_install_arch_uxfix.py  test_kernel.py  test_media_add_naming.py  test_media_naming.py  test_media_uxfix.py  test_orphans.py  test_package_helpers.py  test_pending_media_rename.py  test_privileges.py  test_privileges_migration.py  test_remove_arch.py  test_resolver.py  test_resolver_helpers.py  test_resolver_partial.py  test_rpm.py  test_rpmsrate.py  test_settings.py  test_suggests.py  test_synthesis.py  test_wakeup.py
(+14 files in other folders)
