[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urpm"
version = "0.1.0"
description = "Modern package manager for Mageia Linux"
readme = "README.md"
license = {text = "GPL-2.0-or-later"}
authors = [
    {name = "Mageia Community"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Software Distribution",
]
dependencies = [
    "zstandard>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
urpm = "urpm.cli.main:main"

[project.urls]
Homepage = "https://mageia.org"
Repository = "https://github.com/mageia/urpm-ng"

[tool.setuptools.packages.find]
where = ["."]
include = ["urpm*"]

[tool.pytest.ini_options]
testpaths = ["urpm/tests"]
python_files = ["test_*.py"]
