[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urpm"
version = "0.1.27"
description = "Modern package manager for Mageia Linux"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    {name = "Mageia Community"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Software Distribution",
]
dependencies = [
    # Note: zstd support is required but package name varies:
    # - pip: zstandard
    # - Mageia: python3-zstd (provides 'zstd' module)
    # We don't list it here to avoid conflicts on Mageia
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
urpm = "urpm.cli.main:main"
urpmd = "urpm.daemon.daemon:main"
urpm-dbus-service = "urpm.dbus.service:main"

[project.urls]
Homepage = "https://mageia.org"
Repository = "https://github.com/mageia/urpm-ng"

[tool.setuptools.packages.find]
where = ["."]
include = ["urpm*"]

[tool.pytest.ini_options]
testpaths = ["urpm/tests"]
python_files = ["test_*.py"]
filterwarnings = [
    # libsolv SWIG bindings bug - upstream issue, not ours
    "ignore:builtin type Swig.*:DeprecationWarning",
    "ignore:builtin type swigvarlink.*:DeprecationWarning",
]
