[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpmdrake-ng"
version = "0.4.1"
description = "Modern graphical package manager for Mageia Linux"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    {name = "Mageia Community"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Software Distribution",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
rpmdrake-ng = "rpmdrake.qt.main:main"

[project.urls]
Homepage = "https://mageia.org"
Repository = "https://github.com/mageia/urpm-ng"

[tool.setuptools.packages.find]
where = ["."]
include = ["rpmdrake", "rpmdrake.*"]

[tool.pytest.ini_options]
testpaths = ["rpmdrake/tests"]
python_files = ["test_*.py"]
